= kotlin 1.0.1. C code with kotlin goodness.